--- a/app/src/main/res/layout/activity_addjamat.xml
+++ b/app/src/main/res/layout/activity_addjamat.xml
@@ -11,11 +11,67 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.appswallet.jamatfinder.Screens.Addjamat">
-
-
-    <ScrollView
+    <LinearLayout
+        android:id="@+id/map_layout_id"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Set your Location"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            android:layout_margin="@dimen/activity_horizontal_margin" />
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="300dp"
+        >
+
+        <include layout="@layout/fragment_map"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            />
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:src="@drawable/marker"
+            />
+    </FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="20dp"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Your Location :"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            android:layout_margin="@dimen/activity_horizontal_margin" />
+        <TextView
+            android:id="@+id/location_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text=""
+            android:textSize="17sp"
+            android:layout_margin="@dimen/activity_horizontal_margin" />
+    </LinearLayout>
+    </LinearLayout>
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/map_layout_id"
+        >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +84,7 @@
             android:id="@+id/add_radio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:gravity="center"
             android:orientation="horizontal"
             >
@@ -55,11 +111,13 @@
             android:id="@+id/jamat_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             >
 
         </FrameLayout>
 
         <Spinner
+            android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/spinner"
@@ -70,6 +128,7 @@
             android:id="@+id/time_layout"
             android:orientation="horizontal"
             android:layout_width="wrap_content"
+
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="match_parent"
@@ -99,62 +158,18 @@
 
         </LinearLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Set your Location"
-            android:textSize="17sp"
-            android:textStyle="bold"
-            android:layout_margin="@dimen/activity_horizontal_margin" />
 
-<FrameLayout
-    android:layout_width="fill_parent"
-    android:layout_height="300dp"
-    >
-
-    <include layout="@layout/fragment_map"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        />
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:src="@drawable/marker"
-        />
-</FrameLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/jamat_btn"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
+            android:text = "Add Jamat"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Your Location :"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:layout_margin="@dimen/activity_horizontal_margin" />
-        <TextView
-            android:id="@+id/location_address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text=""
-            android:textSize="17sp"
-            android:layout_margin="@dimen/activity_horizontal_margin" />
-        </LinearLayout>
+
     </LinearLayout>
     </ScrollView>
-    <Button
-        android:id="@+id/jamat_btn"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text = "Add Jamat"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
