--- a/app/src/main/res/layout/content_dialog_edit.xml
+++ b/app/src/main/res/layout/content_dialog_edit.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    >
-    <EditText
-        android:id="@+id/masjid_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/enter_masjid"
-        />
+    android:layout_height="match_parent">
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,16 +25,6 @@
             android:textSize="18dp"
             android:layout_weight="1"
 
-            />
-
-        <ImageButton
-            android:id="@+id/fajar_btn"
-            android:layout_width="0dp"
-            android:layout_weight="0.5"
-            android:src="@android:drawable/ic_input_add"
-            android:layout_height="match_parent"
-            android:textStyle="bold"
-            android:textSize="18dp"
             />
 
         <TextView
@@ -77,15 +62,7 @@
             android:textSize="18dp"
             />
 
-        <ImageButton
-            android:id="@+id/zuhar_btn"
-            android:layout_width="0dp"
-            android:layout_weight="0.5"
-            android:src="@android:drawable/ic_input_add"
-            android:layout_height="match_parent"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            />
+
         <TextView
             android:id="@+id/zuhar_time"
             android:layout_width="0dp"
@@ -117,15 +94,7 @@
             android:textSize="18dp"
             />
 
-        <ImageButton
-            android:id="@+id/asar_btn"
-            android:layout_width="0dp"
-            android:layout_weight="0.5"
-            android:src="@android:drawable/ic_input_add"
-            android:layout_height="match_parent"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            />
+
         <TextView
             android:id="@+id/asar_time"
             android:layout_width="0dp"
@@ -157,15 +126,7 @@
             android:textSize="18dp"
             />
 
-        <ImageButton
-            android:id="@+id/magrib_btn"
-            android:layout_width="0dp"
-            android:layout_weight="0.5"
-            android:src="@android:drawable/ic_input_add"
-            android:layout_height="match_parent"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            />
+
         <TextView
             android:id="@+id/magrib_time"
             android:layout_width="0dp"
@@ -183,7 +144,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="3"
-
         android:layout_margin="5dp"
         android:orientation="horizontal"
         >
@@ -198,15 +158,7 @@
             android:textSize="18dp"
             />
 
-        <ImageButton
-            android:id="@+id/isha_btn"
-            android:layout_width="0dp"
-            android:layout_weight="0.5"
-            android:src="@android:drawable/ic_input_add"
-            android:layout_height="match_parent"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            />
+
         <TextView
             android:id="@+id/isha_time"
             android:layout_width="0dp"
@@ -222,5 +174,11 @@
     </LinearLayout>
 
 
-
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Done"
+       android:id="@+id/edit_btn"
+        />
 </LinearLayout>
