--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.appswallet.jamatfinder.MainActivity">
+<android.support.design.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        tools:context=".MainActivity">
+
+  <TextView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="Welcome to the main board, now clam down !"
+          android:gravity="center"
+          android:layout_margin="50dp"/>
+
+  <Button android:id="@+id/backButton"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="LogOut"
+          android:layout_marginTop="120dp"/>
+
+  <Button android:id="@+id/getUserButton"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="Get User and Send push"
+          android:layout_marginTop="180dp"/>
 
 
-</RelativeLayout>
+
+</android.support.design.widget.CoordinatorLayout>
