--- a/app/src/main/res/layout/activity_log_in_screen.xml
+++ b/app/src/main/res/layout/activity_log_in_screen.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context="com.appswallet.jamatfinder.screens.LogInScreen">
+        tools:context=".firebase_push_notification.screens.LogInScreen">
 
     <LinearLayout
             android:layout_width="fill_parent"
