--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context=".screens.SignupScreen">
+        tools:context=".firebase_push_notification.screens.SignupScreen">
 
     <LinearLayout
             android:layout_width="fill_parent"
