--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -8,7 +8,7 @@
         android:layout_gravity="center"
         android:background="@color/colorPrimary"
         android:fitsSystemWindows="true"
-        tools:context=".firebase_push_notification.screens.ResetPasswordScreen">
+        tools:context=".firebase_push_notification.auth_screens.ResetPasswordScreen">
 
     <LinearLayout
             android:layout_width="fill_parent"
